--- a/integration-activemq/src/main/resources/application.yml
+++ b/integration-activemq/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   jms:
     pub-sub-domain: false
   activemq:
-    user: root
-    password: root
-    broker-url: tcp://activemq-server:61616
+    user: admin
+    password: admin
+    broker-url: tcp://127.0.0.1:61616
+    pool:
+      enabled: false
